update schedule and resources

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,8 @@
         </label>
 
       <div class="trigger">
-        <a class="page-link" href="{{ '/cvpr2022/' | relative_url }}">CVPR 2022</a>
-        <a class="page-link" href="{{ '/naacl2022/' | relative_url }}">NAACL 2022</a>
+        <a class="page-link" href="{{ '/cvpr2023/' | relative_url }}">CVPR 2023</a>
+        <a class="page-link" href="{{ '/siggraph2023/' | relative_url }}">SIGGRAPH 2023</a>
         <a class="page-link" href="{{ '/schedule/' | relative_url }}">schedule</a>
         <a class="page-link" href="{{ '/resources/' | relative_url }}">resources</a>
       </div>
