--- a/_layouts/schedule.html
+++ b/_layouts/schedule.html
@@ -17,7 +17,7 @@ layout: default
       </colgroup>
       <thead class="thead-light">
         <tr>
-          <th scope="col">Part</th>
+          <th scope="col">Time</th>
           <th scope="col">Topics</th>
           <th scope="col">Readings</th>
         </tr>
